# xcodec2-infer-lib

./: .gitignore  README  README.md  pyproject.toml  requirements.txt  setup.py
src/vq/: activations.py  bs_roformer5.py  codec_decoder.py  codec_decoder_vocos.py  factorized_vector_quantize.py  unet.py
src/xcodec2/: configuration_bigcodec.py  modeling_xcodec2.py
tests/: speech_tokens.safetensors  test.ipynb  test_xcodec.py
vq/: __init__.py  codec_decoder.py  codec_decoder_vocos.py  codec_encoder.py  residual_vq.py  unet.py
